# PayU-Main-Service

./: .env.example  deploy.sh  dockerfile  main.py  pyproject.toml
src/: main.py
src/api/middlewares/: auth.py  logging.py
src/api/rest/: app.py  dependencies.py
src/api/rest/routes/: auth_router.py  health.py  invoice_router.py  process_router.py
src/config/: settings.py
src/core/config/: settings.py
src/core/exceptions/: exceptions.py
src/core/security/: jwt_handler.py
src/data/clients/: database.py
src/data/migrations/: runner.py
src/data/migrations/versions/: 20260324_initial_schema.sql
src/data/models/: log_model.py  user_model.py
src/data/repositories/: base_repository.py
src/observability/logging/: logging_config.py
